<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport = "true"
    android:background="@drawable/background"
    tools:context=".MainActivity">


    <LinearLayout

        android:padding="16dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:paddingHorizontal="16dp"
            android:layout_margin="8dp"
            android:layout_width="match_parent"
            app:helperText="Required"
            app:helperTextTextColor="@color/white"
            app:counterEnabled="true"
            app:counterMaxLength="10"
            android:layout_height="wrap_content">


            <com.google.android.material.textfield.TextInputEditText

                android:id="@+id/inp_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nombre_de_usuario" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            app:helperText="Required"
            app:helperTextTextColor="@color/white"
            android:paddingHorizontal="16dp"
            android:layout_margin="8dp"
            app:counterEnabled="true"
            app:counterMaxLength="6"
            app:passwordToggleEnabled="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inp_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/contrase_a"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:backgroundTint="@color/black"
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="32dp"
            android:minHeight="56dp"
            android:text="@string/ingresar" />
    </LinearLayout>

</ScrollView>